# threshold

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DEVPOST.md  README.md  TODO.md  demo.md  first_steps.md  langgraph.json  main.py  package-lock.json  package.json  pyproject.toml  threshold_frontend_current.md  threshold_frontend_design.md  threshold_impl.md
backend/: collect-info-server.mjs  package-lock.json  package.json  server.js
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
interview/: info_collection.md
stitch_reentry_counseling_assistant_dashboard/ai_applications_refined/: code.html
stitch_reentry_counseling_assistant_dashboard/anchor_reentry_system/: DESIGN.md
stitch_reentry_counseling_assistant_dashboard/benefits_services/: code.html
stitch_reentry_counseling_assistant_dashboard/counselor_profile_resource_center/: code.html
stitch_reentry_counseling_assistant_dashboard/documents_vault/: code.html
stitch_reentry_counseling_assistant_dashboard/employment_tracking/: code.html
stitch_reentry_counseling_assistant_dashboard/housing_stabilization/: code.html
stitch_reentry_counseling_assistant_dashboard/messages_communication_hub/: code.html
stitch_reentry_counseling_assistant_dashboard/messages_communication_updated/: code.html
threshold/: SERVER_README.md  server.py
workflows/: apply_job.md  community_resource_search.md  cover_letter.md  ct_dmv_b230_id_application.md  ct_dmv_nondriver_id.md  housing_application_letter.md  housing_pipeline.md  legal_letter.md  resume.md
(+164 files in other folders)
