[project]
name = "threshold"
version = "0.1.0"
description = "Local-first, trauma-informed AI assistant for people navigating re-entry after incarceration"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=46.0.6",
    "deepagents>=0.4.12",
    "fastapi>=0.115",
    "google-genai>=1.69.0",
    "httpx>=0.28.1",
    "langchain-anthropic>=1.4.0",
    "langchain-openai>=0.3.0",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "browserbase>=1.0.0",
    "playwright>=1.50.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "reportlab>=4.0",
    "python-multipart>=0.0.18",
    "rich>=14.3.3",
    "sqlalchemy>=2.0",
    "typer>=0.24.1",
    "uvicorn>=0.34",
    "aiosqlite>=0.22.1",
    "pipecat-ai[daily,google,deepgram,elevenlabs,silero,runner]>=0.0.108",
    "pipecat-ai-flows>=0.0.23",
]
